--- a/serve/adapter/lambda_function/stack-lambda.yml
+++ b/serve/adapter/lambda_function/stack-lambda.yml
@@ -117,6 +117,7 @@ Resources:
             Action:
               - dynamodb:Query
               - dynamodb:PutItem
+              - dynamodb:GetItem
               - dynamodb:UpdateItem
               - dynamodb:DeleteItem
             Resource:
